Revision history for Metabase-Fact

{{$NEXT}}

0.019     2010-10-11 00:02:19 EST5EDT

  - Fix failing t/profile.t for CPAN build paths with spaces (RT#59580)
    [Reini Urban]

0.018     2010-09-01 18:22:44 EST5EDT

  - Improve diagnostics when JSON decoding fails

0.017     2010-08-14 16:08:05 EST5EDT

  - Refactor save() and load() to use new as_json() and to_json() method.
    Persistence is now possible to/from file, string, or unblessed
    data structure.

  - Loads any necessary class during as_struct() for improved flexibility

0.016     2010-07-07 22:03:14 EST5EDT

  - Removing 'use base' throughout to attempt to squash some heisenbugs

0.015     2010-07-07 11:49:30 EST5EDT

  - Identical to 0.014 (which was intentionally not released to CPAN to
    test a Dist::Zilla upgrade)

0.014     2010-07-07 11:45:42 EST5EDT

  - Ensure metabase-profile gets installed (it was lost due to a stale
    dist.ini)

  - Make use of utf8::encode/decode conditional on 5.008

0.013     2010-04-19 20:49:18 EST5EDT

  - Weaken validation of keys in Metabase::Fact::Hash.  They must exist,
    but may be undefined or zero length (suggested by H.Merijn Brand)

  - Added documentation of the full_url() method for
    Metabase::Resource::perl::commit

0.012     2010-04-11 13:41:15 America/New_York

  - Added Metabase::Resource::perl (contributed
    by H.Merijn Brand)

0.011     2010-03-29 08:04:26 EST5EDT

  - Whoops.  Fix broken tests.

0.010     2010-03-29 07:59:34 EST5EDT

  - Whoops. Fix serialization of JSON in bin/metabase-profile, too

  - Add a wide character to profile test

0.009     2010-03-29 07:49:11 EST5EDT

  - Fix serialization to ensure ASCII JSON

0.008     2010-03-23 18:54:21 EST5EDT

  - Fixed failing tests on 5.6.1 due to problems in overloaded
    stringification of Metabase::Resource [Ricardo Signes, Apocalypse]

  - Converted to Dist::Zilla for release management

  - Changed to the Apache License, version 2.0; (it's clearer, relicensable,