@@ -2,6 +2,8 @@ Revision history for Metabase-Fact
 
 {{$NEXT}}
 
+  - Document limitations on content and resource metadata field names
+
 0.019     2010-10-11 00:02:19 EST5EDT
 
   - Fix failing t/profile.t for CPAN build paths with spaces (RT#59580)
